fix shadow on dark mode/ fix item hover background color

--- a/index.less
+++ b/index.less
@@ -349,7 +349,7 @@
                     background-image  : unset;
                     position          : absolute;
                     cursor            : pointer;
-
+                    box-shadow        : none;
                     // set color
                     &.minimize {
                         background-color: rgb(255, 189, 76) !important;
@@ -897,6 +897,7 @@
                 opacity: 0;
             }
             .cd-mediaitem-list-item:hover{
+                background-color: rgba(150, 150, 150, 0.3);
                 .heart-icon{
                     display: flex;
                 }
